[LW-8175] Destination input alignment issues in sending flow (#450)
* fix: lw-8175 destination input alignment issues in sending flow

--- a/apps/browser-extension-wallet/src/views/browser-view/features/send-transaction/components/Form/MetadataInput.module.scss
+++ b/apps/browser-extension-wallet/src/views/browser-view/features/send-transaction/components/Form/MetadataInput.module.scss
@@ -39,7 +39,7 @@
   }
 
   .suffixContent {
-    margin-right: -#{size_unit(2.25)};
+    margin-right: -7px;
     &.focus {
       margin-bottom: -#{size_unit(1.5)};
     }
